--- a/index.html
+++ b/index.html
@@ -2,124 +2,185 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Block Fruits Game v1</title>
+<title>Block Fruits v2.5</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <style>
-body {
-  margin: 0;
-  background: #222;
-  overflow: hidden;
+body { margin:0; overflow:hidden; background:#7ec850; font-family:Arial }
+canvas { display:block }
+.btn {
+  position:fixed; width:60px; height:60px; border-radius:50%;
+  background:rgba(0,0,0,.5); color:#fff; font-size:22px;
+  text-align:center; line-height:60px; user-select:none;
 }
-canvas {
-  display: block;
-  background: linear-gradient(#4caf50, #2e7d32);
-}
-#info {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  color: white;
-  font-family: Arial;
-  background: rgba(0,0,0,0.4);
-  padding: 8px 12px;
-  border-radius: 8px;
+#left{left:20px;bottom:20px}
+#right{left:100px;bottom:20px}
+#jump{left:60px;bottom:90px}
+#down{right:20px;bottom:20px}
+#run{right:20px;bottom:90px}
+#fly{right:20px;bottom:160px}
+#inv{
+  position:fixed; top:10px; left:10px;
+  background:rgba(0,0,0,.5); color:#fff;
+  padding:6px 10px; border-radius:8px; font-size:14px;
 }
 </style>
 </head>
 <body>
 
-<div id="info">🍉 Block Fruis<br>Gerak: ◀ ▶ Lompat: ▲</div>
 <canvas id="game"></canvas>
 
+<div id="inv">🪨 Batu: <span id="batu">0</span></div>
+
+<div id="left" class="btn">◀</div>
+<div id="right" class="btn">▶</div>
+<div id="jump" class="btn">▲</div>
+<div id="down" class="btn">▼</div>
+<div id="run" class="btn">⚡</div>
+<div id="fly" class="btn">✈</div>
+
 <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
+const c = document.getElementById("game");
+const ctx = c.getContext("2d");
+c.width = innerWidth;
+c.height = innerHeight;
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+const worldWidth = 3000;
+let camX = 0;
 
-// Player
 const player = {
-  x: 100,
-  y: canvas.height - 120,
-  w: 40,
-  h: 40,
-  vy: 0,
-  speed: 6,
-  jump: -15,
-  onGround: false
+  x:100,y:200,w:30,h:30,
+  vy:0,onGround:false,
+  speed:3,run:false,
+  fly:false
 };
 
-const gravity = 0.8;
+const gravity = 0.6;
+let keys = {};
+let inventory = { batu:0 };
 
-// Fruit
-let fruits = [];
+const rocks=[], trees=[];
 
-function spawnFruit() {
-  fruits.push({
-    x: Math.random() * (canvas.width - 30),
-    y: -30,
-    r: 15
+// batu liar
+for(let i=0;i<30;i++){
+  rocks.push({
+    x:Math.random()*worldWidth,
+    y:c.height-60,
+    w:40,h:40
   });
 }
-setInterval(spawnFruit, 1000);
 
-// Input
-const keys = {};
-window.addEventListener("keydown", e => keys[e.key] = true);
-window.addEventListener("keyup", e => keys[e.key] = false);
-
-function update() {
-  // Move
-  if (keys["ArrowLeft"]) player.x -= player.speed;
-  if (keys["ArrowRight"]) player.x += player.speed;
-
-  // Jump
-  if (keys["ArrowUp"] && player.onGround) {
-    player.vy = player.jump;
-    player.onGround = false;
-  }
-
-  // Gravity
-  player.vy += gravity;
-  player.y += player.vy;
-
-  // Ground
-  if (player.y + player.h >= canvas.height - 40) {
-    player.y = canvas.height - 40 - player.h;
-    player.vy = 0;
-    player.onGround = true;
-  }
-
-  // Fruits
-  fruits.forEach(f => f.y += 4);
-  fruits = fruits.filter(f => f.y < canvas.height + 50);
+// pohon
+for(let i=0;i<25;i++){
+  trees.push({
+    x:Math.random()*worldWidth,
+    y:c.height-120
+  });
 }
 
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+function collide(a,b){
+  return a.x<a.bx+b.w&&a.x+a.w>b.bx&&a.y<b.y+b.h&&a.y+a.h>b.y;
+}
 
-  // Ground
-  ctx.fillStyle = "#5d4037";
-  ctx.fillRect(0, canvas.height - 40, canvas.width, 40);
+function rect(a,b){
+  return a.x<a.x2+b.w&&a.x+a.w>b.x2&&a.y<b.y+b.h&&a.y+a.h>b.y;
+}
 
-  // Player
-  ctx.fillStyle = "#2196f3";
-  ctx.fillRect(player.x, player.y, player.w, player.h);
+function update(){
+  let sp = player.run ? 6 : 3;
+  if(keys.left) player.x -= sp;
+  if(keys.right) player.x += sp;
 
-  // Fruits
-  ctx.fillStyle = "red";
-  fruits.forEach(f => {
+  if(!player.fly){
+    player.vy += gravity;
+    player.y += player.vy;
+  }
+
+  player.onGround=false;
+
+  if(player.y+player.h>=c.height-20){
+    player.y=c.height-player.h-20;
+    player.vy=0;
+    player.onGround=true;
+  }
+
+  for(let r of rocks){
+    if(player.x<r.x+r.w && player.x+player.w>r.x &&
+       player.y<r.y+r.h && player.y+player.h>r.y){
+      if(player.vy>0){
+        player.y=r.y-player.h;
+        player.vy=0;
+        player.onGround=true;
+      }
+    }
+  }
+
+  camX = player.x - c.width/2;
+  camX = Math.max(0, Math.min(camX, worldWidth-c.width));
+}
+
+function draw(){
+  ctx.clearRect(0,0,c.width,c.height);
+
+  ctx.save();
+  ctx.translate(-camX,0);
+
+  // tanah
+  ctx.fillStyle="#795548";
+  ctx.fillRect(0,c.height-20,worldWidth,20);
+
+  // pohon
+  for(let t of trees){
+    ctx.fillStyle="#8d6e63";
+    ctx.fillRect(t.x+10,t.y+40,20,40);
+    ctx.fillStyle="#2e7d32";
     ctx.beginPath();
-    ctx.arc(f.x, f.y, f.r, 0, Math.PI * 2);
+    ctx.arc(t.x+20,t.y+30,30,0,Math.PI*2);
     ctx.fill();
-  });
+  }
+
+  // batu
+  ctx.fillStyle="gray";
+  for(let r of rocks){
+    ctx.fillRect(r.x,r.y,r.w,r.h);
+  }
+
+  // player
+  ctx.fillStyle="red";
+  ctx.fillRect(player.x,player.y,player.w,player.h);
+
+  ctx.restore();
 }
 
-function loop() {
-  update();
-  draw();
+function loop(){
+  update(); draw();
   requestAnimationFrame(loop);
 }
-
 loop();
+
+// tombol HP
+left.ontouchstart=()=>keys.left=true;
+left.ontouchend=()=>keys.left=false;
+right.ontouchstart=()=>keys.right=true;
+right.ontouchend=()=>keys.right=false;
+jump.ontouchstart=()=>{ if(player.onGround) player.vy=-12 };
+down.ontouchstart=()=>player.y+=5;
+run.ontouchstart=()=>player.run=true;
+run.ontouchend=()=>player.run=false;
+fly.ontouchstart=()=>player.fly=!player.fly;
+
+// keyboard PC
+onkeydown=e=>{
+  if(e.key==="ArrowLeft")keys.left=true;
+  if(e.key==="ArrowRight")keys.right=true;
+  if(e.key==="ArrowUp"&&player.onGround)player.vy=-12;
+  if(e.key==="Shift")player.run=true;
+  if(e.key==="f")player.fly=!player.fly;
+};
+onkeyup=e=>{
+  if(e.key==="ArrowLeft")keys.left=false;
+  if(e.key==="ArrowRight")keys.right=false;
+  if(e.key==="Shift")player.run=false;
+};
 </script>
+</body>
+</html>
