--- a/index.html
+++ b/index.html
@@ -1,190 +1,218 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Block Fruis</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Block Fruis</title>
 <style>
-body{margin:0;overflow:hidden;background:#87ceeb}
+body{margin:0;overflow:hidden;background:black}
 canvas{display:block}
-
-/* JOYSTICK */
-#joy{
-  position:fixed;
-  bottom:30px;left:30px;
-  width:120px;height:120px;
-  border-radius:50%;
-  background:rgba(0,0,0,.3);
-  touch-action:none;
-}
-#stick{
-  position:absolute;
-  left:40px;top:40px;
-  width:40px;height:40px;
-  border-radius:50%;
-  background:#fff;
-}
-
-/* CREATIVE BUTTONS */
 #ui{
-  position:fixed;
-  right:20px;bottom:30px;
-  display:flex;flex-direction:column;gap:10px;
+ position:fixed;
+ top:10px;
+ left:10px;
+ background:#222;
+ color:white;
+ padding:8px;
+ font-size:14px;
+ border-radius:6px
 }
-.btn{
-  padding:10px 14px;
-  background:#333;color:#fff;
-  border-radius:8px;
-  text-align:center;
-  user-select:none;
-}
-.btn.active{background:#2ecc71}
 </style>
 </head>
 <body>
 
 <canvas id="game"></canvas>
-
-<div id="joy"><div id="stick"></div></div>
-
 <div id="ui">
-  <div id="creativeBtn" class="btn">CREATIVE</div>
-  <div id="upBtn" class="btn">▲</div>
-  <div id="downBtn" class="btn">▼</div>
+Mode: <span id="mode">SURVIVAL</span><br>
+Item: <span id="item">Rumput</span>
 </div>
 
 <script>
-const c = document.getElementById("game");
-const ctx = c.getContext("2d");
-c.width = innerWidth;
-c.height = innerHeight;
+const canvas=document.getElementById("game");
+const ctx=canvas.getContext("2d");
+canvas.width=innerWidth;
+canvas.height=innerHeight;
 
-const TILE = 32;
-const MAP = 64;
+const TILE=32;
+const MAP=150;
 
-// PLAYER (DATA SAJA)
-const player = {
-  x: MAP*TILE/2,
-  y: MAP*TILE/2,
-  z: 0,
-  speed: 3,
-  flySpeed: 3
+const ITEMS=["Rumput","Batu","Pohon","Batu Liar"];
+const MODES=["SURVIVAL","HARDCORE","SPECTATOR","CREATIVE"];
+let selected=0;
+let mode=0;
+
+// ===== PLAYER =====
+const player={
+ x:MAP*TILE/2,
+ y:MAP*TILE/2,
+ speed:4,
+ hp:20,
+ alive:true
 };
 
-// CAMERA
-const cam = {x:0,y:0};
+function resetPlayer(){
+ player.x=MAP*TILE/2;
+ player.y=MAP*TILE/2;
+ player.hp=mode===1?10:20;
+ player.alive=true;
+}
 
-// MAP
-const world=[];
+// ===== MAP =====
+const map=[];
 for(let y=0;y<MAP;y++){
-  world[y]=[];
-  for(let x=0;x<MAP;x++){
-    world[y][x]=Math.random()<0.15?"stone":"grass";
-  }
+ map[y]=[];
+ for(let x=0;x<MAP;x++){
+  const r=Math.random();
+  if(r<0.04) map[y][x]=3;
+  else if(r<0.08) map[y][x]=2;
+  else if(r<0.18) map[y][x]=1;
+  else map[y][x]=0;
+ }
 }
 
-// INPUT MOVE
-let mx=0,my=0;
-let flyUp=false, flyDown=false;
-let creative=false;
+// ===== DRAW TILE =====
+function drawTile(t,x,y){
+ if(t===0) ctx.fillStyle="#4CAF50";
+ if(t===1) ctx.fillStyle="#9E9E9E";
+ if(t===2) ctx.fillStyle="#2E7D32";
+ if(t===3) ctx.fillStyle="#616161";
+ ctx.fillRect(x,y,TILE,TILE);
+}
 
-// UPDATE
+// ===== INPUT =====
+const keys={};
+addEventListener("keydown",e=>{
+ keys[e.key]=true;
+
+ if(e.key>="1"&&e.key<="4"){
+  mode=Number(e.key)-1;
+  document.getElementById("mode").textContent=MODES[mode];
+  if(mode===0) player.hp=20;
+  if(mode===1) player.hp=10;
+  if(mode>=2) player.hp=Infinity;
+  player.alive=true;
+ }
+
+ if(e.key>="q"&&e.key<="t"){
+  selected=e.key.charCodeAt(0)-113;
+  document.getElementById("item").textContent=ITEMS[selected];
+ }
+});
+addEventListener("keyup",e=>keys[e.key]=false);
+
+// ===== JOYSTICK =====
+let jx=0,jy=0,touch=false;
+canvas.addEventListener("touchstart",()=>touch=true);
+canvas.addEventListener("touchmove",e=>{
+ const t=e.touches[0];
+ jx=(t.clientX-canvas.width/2)/80;
+ jy=(t.clientY-canvas.height/2)/80;
+});
+canvas.addEventListener("touchend",()=>{
+ touch=false;jx=jy=0;
+});
+
+// ===== INTERAKSI BLOK =====
+canvas.addEventListener("click",()=>{
+ const tx=Math.floor(player.x/TILE);
+ const ty=Math.floor(player.y/TILE);
+ if(!map[ty]||map[ty][tx]==null) return;
+
+ if(mode===2) return;
+
+ if(mode===0||mode===1){
+  map[ty][tx]=0;
+ }
+
+ if(mode===3){
+  map[ty][tx]=selected;
+ }
+});
+
+// ===== DAMAGE =====
+function checkDamage(){
+ if(mode>=2||!player.alive) return;
+ const tx=Math.floor(player.x/TILE);
+ const ty=Math.floor(player.y/TILE);
+ if(map[ty]&&map[ty][tx]===3){
+  player.hp-=0.05;
+  if(player.hp<=0){
+   player.hp=0;
+   player.alive=false;
+   if(mode===0) setTimeout(resetPlayer,1000);
+  }
+ }
+}
+
+// ===== UPDATE =====
 function update(){
-  player.x += mx*player.speed;
-  player.y += my*player.speed;
+ if(!player.alive&&mode===1) return;
 
-  if(creative){
-    if(flyUp) player.z += player.flySpeed;
-    if(flyDown) player.z -= player.flySpeed;
-  }
+ let speed=player.speed;
+ if(mode===1) speed=2;
+ if(mode===3) speed=6;
 
-  cam.x = player.x - c.width/2;
-  cam.y = player.y - c.height/2;
+ if(keys["w"]||keys["ArrowUp"]) player.y-=speed;
+ if(keys["s"]||keys["ArrowDown"]) player.y+=speed;
+ if(keys["a"]||keys["ArrowLeft"]) player.x-=speed;
+ if(keys["d"]||keys["ArrowRight"]) player.x+=speed;
+
+ if(touch){
+  player.x+=jx*speed;
+  player.y+=jy*speed;
+ }
+
+ checkDamage();
 }
 
-// DRAW
+// ===== DRAW =====
 function draw(){
-  ctx.clearRect(0,0,c.width,c.height);
+ ctx.clearRect(0,0,canvas.width,canvas.height);
+ const camX=player.x-canvas.width/2;
+ const camY=player.y-canvas.height/2;
 
-  for(let y=0;y<MAP;y++){
-    for(let x=0;x<MAP;x++){
-      const sx = x*TILE - cam.x;
-      const sy = y*TILE - cam.y + player.z;
-
-      if(world[y][x]==="grass") ctx.fillStyle="#3cb043";
-      else ctx.fillStyle="#777";
-
-      ctx.fillRect(sx,sy,TILE,TILE);
-      ctx.strokeStyle="rgba(0,0,0,.2)";
-      ctx.strokeRect(sx,sy,TILE,TILE);
-    }
+ for(let y=0;y<MAP;y++){
+  for(let x=0;x<MAP;x++){
+   const sx=x*TILE-camX;
+   const sy=y*TILE-camY;
+   if(sx+TILE<0||sy+TILE<0||sx>canvas.width||sy>canvas.height) continue;
+   drawTile(map[y][x],sx,sy);
   }
+ }
 
-  // CROSSHAIR
-  ctx.strokeStyle="#000";
-  ctx.beginPath();
-  ctx.moveTo(c.width/2-10,c.height/2);
-  ctx.lineTo(c.width/2+10,c.height/2);
-  ctx.moveTo(c.width/2,c.height/2-10);
-  ctx.lineTo(c.width/2,c.height/2+10);
-  ctx.stroke();
+ // crosshair
+ ctx.strokeStyle="black";
+ ctx.beginPath();
+ ctx.moveTo(canvas.width/2-6,canvas.height/2);
+ ctx.lineTo(canvas.width/2+6,canvas.height/2);
+ ctx.moveTo(canvas.width/2,canvas.height/2-6);
+ ctx.lineTo(canvas.width/2,canvas.height/2+6);
+ ctx.stroke();
+
+ // HP
+ if(mode<=1){
+  ctx.fillStyle="red";
+  ctx.fillRect(20,60,player.hp*5,10);
+  ctx.strokeStyle="black";
+  ctx.strokeRect(20,60,100,10);
+ }
+
+ // GAME OVER
+ if(!player.alive&&mode===1){
+  ctx.fillStyle="rgba(0,0,0,0.6)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle="red";
+  ctx.font="40px Arial";
+  ctx.fillText("GAME OVER",canvas.width/2-120,canvas.height/2);
+ }
 }
 
-// LOOP
-(function loop(){
-  update();
-  draw();
-  requestAnimationFrame(loop);
-})();
-
-// BREAK & PLACE
-let hold=false;
-c.addEventListener("touchstart",()=>hold=true);
-c.addEventListener("touchend",()=>{
-  const x=Math.floor((c.width/2+cam.x)/TILE);
-  const y=Math.floor((c.height/2+cam.y)/TILE);
-  if(world[y]){
-    world[y][x]=hold?"stone":"grass";
-  }
-  hold=false;
-});
-
-// JOYSTICK
-const joy=document.getElementById("joy");
-const stick=document.getElementById("stick");
-let drag=false;
-
-joy.addEventListener("touchstart",()=>drag=true);
-joy.addEventListener("touchend",()=>{
-  drag=false;
-  mx=my=0;
-  stick.style.left="40px";
-  stick.style.top="40px";
-});
-joy.addEventListener("touchmove",e=>{
-  if(!drag)return;
-  const r=joy.getBoundingClientRect();
-  let x=e.touches[0].clientX-r.left-60;
-  let y=e.touches[0].clientY-r.top-60;
-  const m=Math.hypot(x,y);
-  if(m>40){x=x/m*40;y=y/m*40;}
-  stick.style.left=40+x+"px";
-  stick.style.top=40+y+"px";
-  mx=x/40;
-  my=y/40;
-});
-
-// CREATIVE BUTTONS
-const creativeBtn=document.getElementById("creativeBtn");
-creativeBtn.onclick=()=>{
-  creative=!creative;
-  creativeBtn.classList.toggle("active",creative);
-};
-
-document.getElementById("upBtn").ontouchstart=()=>flyUp=true;
-document.getElementById("upBtn").ontouchend=()=>flyUp=false;
-document.getElementById("downBtn").ontouchstart=()=>flyDown=true;
-document.getElementById("downBtn").ontouchend=()=>flyDown=false;
+function loop(){
+ update();
+ draw();
+ requestAnimationFrame(loop);
+}
+loop();
 </script>
 </body>
 </html>
