--- a/index.html
+++ b/index.html
@@ -1,218 +1,131 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Block Fruis</title>
+<title>Roblox World Simulation</title>
 <style>
-body{margin:0;overflow:hidden;background:black}
-canvas{display:block}
-#ui{
- position:fixed;
- top:10px;
- left:10px;
- background:#222;
- color:white;
- padding:8px;
- font-size:14px;
- border-radius:6px
-}
+body { margin: 0; overflow: hidden; }
+canvas { display: block; }
 </style>
 </head>
 <body>
 
-<canvas id="game"></canvas>
-<div id="ui">
-Mode: <span id="mode">SURVIVAL</span><br>
-Item: <span id="item">Rumput</span>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 
 <script>
-const canvas=document.getElementById("game");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
 
-const TILE=32;
-const MAP=150;
+// Scene
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x87CEEB);
 
-const ITEMS=["Rumput","Batu","Pohon","Batu Liar"];
-const MODES=["SURVIVAL","HARDCORE","SPECTATOR","CREATIVE"];
-let selected=0;
-let mode=0;
+// Camera
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+camera.position.set(0, 5, 10);
 
-// ===== PLAYER =====
-const player={
- x:MAP*TILE/2,
- y:MAP*TILE/2,
- speed:4,
- hp:20,
- alive:true
-};
+// Renderer
+const renderer = new THREE.WebGLRenderer();
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.body.appendChild(renderer.domElement);
 
-function resetPlayer(){
- player.x=MAP*TILE/2;
- player.y=MAP*TILE/2;
- player.hp=mode===1?10:20;
- player.alive=true;
-}
+// Light
+const light = new THREE.DirectionalLight(0xffffff, 1);
+light.position.set(10,20,10);
+scene.add(light);
 
-// ===== MAP =====
-const map=[];
-for(let y=0;y<MAP;y++){
- map[y]=[];
- for(let x=0;x<MAP;x++){
-  const r=Math.random();
-  if(r<0.04) map[y][x]=3;
-  else if(r<0.08) map[y][x]=2;
-  else if(r<0.18) map[y][x]=1;
-  else map[y][x]=0;
- }
-}
+scene.add(new THREE.AmbientLight(0xffffff, 0.5));
 
-// ===== DRAW TILE =====
-function drawTile(t,x,y){
- if(t===0) ctx.fillStyle="#4CAF50";
- if(t===1) ctx.fillStyle="#9E9E9E";
- if(t===2) ctx.fillStyle="#2E7D32";
- if(t===3) ctx.fillStyle="#616161";
- ctx.fillRect(x,y,TILE,TILE);
-}
+// Ground
+const groundGeometry = new THREE.PlaneGeometry(200, 200);
+const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x228B22 });
+const ground = new THREE.Mesh(groundGeometry, groundMaterial);
+ground.rotation.x = -Math.PI / 2;
+scene.add(ground);
 
-// ===== INPUT =====
-const keys={};
-addEventListener("keydown",e=>{
- keys[e.key]=true;
-
- if(e.key>="1"&&e.key<="4"){
-  mode=Number(e.key)-1;
-  document.getElementById("mode").textContent=MODES[mode];
-  if(mode===0) player.hp=20;
-  if(mode===1) player.hp=10;
-  if(mode>=2) player.hp=Infinity;
-  player.alive=true;
- }
-
- if(e.key>="q"&&e.key<="t"){
-  selected=e.key.charCodeAt(0)-113;
-  document.getElementById("item").textContent=ITEMS[selected];
- }
-});
-addEventListener("keyup",e=>keys[e.key]=false);
-
-// ===== JOYSTICK =====
-let jx=0,jy=0,touch=false;
-canvas.addEventListener("touchstart",()=>touch=true);
-canvas.addEventListener("touchmove",e=>{
- const t=e.touches[0];
- jx=(t.clientX-canvas.width/2)/80;
- jy=(t.clientY-canvas.height/2)/80;
-});
-canvas.addEventListener("touchend",()=>{
- touch=false;jx=jy=0;
-});
-
-// ===== INTERAKSI BLOK =====
-canvas.addEventListener("click",()=>{
- const tx=Math.floor(player.x/TILE);
- const ty=Math.floor(player.y/TILE);
- if(!map[ty]||map[ty][tx]==null) return;
-
- if(mode===2) return;
-
- if(mode===0||mode===1){
-  map[ty][tx]=0;
- }
-
- if(mode===3){
-  map[ty][tx]=selected;
- }
-});
-
-// ===== DAMAGE =====
-function checkDamage(){
- if(mode>=2||!player.alive) return;
- const tx=Math.floor(player.x/TILE);
- const ty=Math.floor(player.y/TILE);
- if(map[ty]&&map[ty][tx]===3){
-  player.hp-=0.05;
-  if(player.hp<=0){
-   player.hp=0;
-   player.alive=false;
-   if(mode===0) setTimeout(resetPlayer,1000);
+// Kota Roblox (blok-blok)
+for(let i=-40;i<40;i+=8){
+  for(let j=-40;j<40;j+=8){
+    const height = Math.random()*10+5;
+    const building = new THREE.Mesh(
+      new THREE.BoxGeometry(5, height, 5),
+      new THREE.MeshLambertMaterial({color: 0xcccccc})
+    );
+    building.position.set(i, height/2, j);
+    scene.add(building);
   }
- }
 }
 
-// ===== UPDATE =====
-function update(){
- if(!player.alive&&mode===1) return;
+// Player Roblox
+const player = new THREE.Group();
 
- let speed=player.speed;
- if(mode===1) speed=2;
- if(mode===3) speed=6;
+// Body
+const body = new THREE.Mesh(
+  new THREE.BoxGeometry(2,3,1),
+  new THREE.MeshLambertMaterial({color: 0x0000ff})
+);
+body.position.y = 2;
+player.add(body);
 
- if(keys["w"]||keys["ArrowUp"]) player.y-=speed;
- if(keys["s"]||keys["ArrowDown"]) player.y+=speed;
- if(keys["a"]||keys["ArrowLeft"]) player.x-=speed;
- if(keys["d"]||keys["ArrowRight"]) player.x+=speed;
+// Head
+const head = new THREE.Mesh(
+  new THREE.BoxGeometry(1.5,1.5,1.5),
+  new THREE.MeshLambertMaterial({color: 0xffcc99})
+);
+head.position.y = 4;
+player.add(head);
 
- if(touch){
-  player.x+=jx*speed;
-  player.y+=jy*speed;
- }
+scene.add(player);
 
- checkDamage();
-}
+// Controls
+let keys = {};
+let velocityY = 0;
+let isJumping = false;
 
-// ===== DRAW =====
-function draw(){
- ctx.clearRect(0,0,canvas.width,canvas.height);
- const camX=player.x-canvas.width/2;
- const camY=player.y-canvas.height/2;
+document.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
+document.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
 
- for(let y=0;y<MAP;y++){
-  for(let x=0;x<MAP;x++){
-   const sx=x*TILE-camX;
-   const sy=y*TILE-camY;
-   if(sx+TILE<0||sy+TILE<0||sx>canvas.width||sy>canvas.height) continue;
-   drawTile(map[y][x],sx,sy);
+// Animation
+function animate(){
+  requestAnimationFrame(animate);
+
+  // Movement
+  if(keys["w"]) player.position.z -= 0.5;
+  if(keys["s"]) player.position.z += 0.5;
+  if(keys["a"]) player.position.x -= 0.5;
+  if(keys["d"]) player.position.x += 0.5;
+
+  // Jump
+  if(keys[" "] && !isJumping){
+    velocityY = 0.3;
+    isJumping = true;
   }
- }
 
- // crosshair
- ctx.strokeStyle="black";
- ctx.beginPath();
- ctx.moveTo(canvas.width/2-6,canvas.height/2);
- ctx.lineTo(canvas.width/2+6,canvas.height/2);
- ctx.moveTo(canvas.width/2,canvas.height/2-6);
- ctx.lineTo(canvas.width/2,canvas.height/2+6);
- ctx.stroke();
+  player.position.y += velocityY;
+  velocityY -= 0.01;
 
- // HP
- if(mode<=1){
-  ctx.fillStyle="red";
-  ctx.fillRect(20,60,player.hp*5,10);
-  ctx.strokeStyle="black";
-  ctx.strokeRect(20,60,100,10);
- }
+  if(player.position.y <= 0){
+    player.position.y = 0;
+    velocityY = 0;
+    isJumping = false;
+  }
 
- // GAME OVER
- if(!player.alive&&mode===1){
-  ctx.fillStyle="rgba(0,0,0,0.6)";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle="red";
-  ctx.font="40px Arial";
-  ctx.fillText("GAME OVER",canvas.width/2-120,canvas.height/2);
- }
+  // Camera follow
+  camera.position.x = player.position.x;
+  camera.position.z = player.position.z + 10;
+  camera.lookAt(player.position);
+
+  renderer.render(scene, camera);
 }
 
-function loop(){
- update();
- draw();
- requestAnimationFrame(loop);
-}
-loop();
+animate();
+
+// Resize
+window.addEventListener("resize", ()=>{
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+});
+
 </script>
+
 </body>
 </html>
